[gd_scene load_steps=21 format=3 uid="uid://bqx2gwnp55vn8"]

[ext_resource type="Texture2D" uid="uid://bblhelu2xlnbg" path="res://Assets/Textures/Placeholders/white_texture.png" id="1_44g82"]
[ext_resource type="Texture2D" uid="uid://bk0g66e8thfkw" path="res://Assets/Textures/After Battle/AfterBattleBlueBG.png" id="2_5nv4g"]
[ext_resource type="Script" uid="uid://dft06778xc061" path="res://Scripts/After Battles/BattleWonScreen.gd" id="2_j0vtd"]
[ext_resource type="Material" uid="uid://bravom4carx8x" path="res://Assets/Materials/Background4tres.tres" id="3_24k56"]
[ext_resource type="Texture2D" uid="uid://b6eq3vbfh8quc" path="res://Assets/Textures/After Battle/AfterBattleBlue.png" id="3_guoxy"]
[ext_resource type="FontFile" uid="uid://b2lwqd3u504hn" path="res://Assets/Fonts/BigSpace-rPKx.ttf" id="4_abt7p"]
[ext_resource type="PackedScene" uid="uid://k8dkcus6ddqc" path="res://Scenes/After Battle/AddToDeckPanel.tscn" id="4_e2ejy"]
[ext_resource type="Script" uid="uid://fm65gmeoowak" path="res://Scripts/Parallax.gd" id="4_li6bc"]
[ext_resource type="Material" uid="uid://da72dgkjq37te" path="res://Assets/Materials/BaseRetroSunMaterial.tres" id="4_o5dal"]
[ext_resource type="Texture2D" uid="uid://bselagskc8btp" path="res://Assets/Textures/Card Game/EndTurnButton.png" id="7_j0vtd"]
[ext_resource type="Texture2D" uid="uid://bjsb6jp1uy50d" path="res://Assets/Textures/After Battle/DisabledButton.png" id="8_fomr0"]
[ext_resource type="Script" uid="uid://ccu4a4ttx02ue" path="res://Scripts/Classes/GameButton.gd" id="11_y51d7"]
[ext_resource type="Material" uid="uid://02532mgqwkc" path="res://Assets/Materials/VHSShader.tres" id="12_y51d7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_abt7p"]
atlas = ExtResource("3_guoxy")
region = Rect2(75.375, 451.591, 1909.11, 1118.68)

[sub_resource type="LabelSettings" id="LabelSettings_sq75o"]
font = ExtResource("4_abt7p")
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e2ejy"]
font = ExtResource("4_abt7p")
font_size = 24
font_color = Color(1, 0.85098, 0.231373, 1)

[sub_resource type="LabelSettings" id="LabelSettings_j0vtd"]
font = ExtResource("4_abt7p")
font_size = 400
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_txptg"]
resource_name = "Fade"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cmo68"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cmo68"]
_data = {
&"Fade": SubResource("Animation_txptg"),
&"RESET": SubResource("Animation_cmo68")
}

[node name="BattleWonScreen" type="TextureRect"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("1_44g82")
script = ExtResource("2_j0vtd")

[node name="Background" type="ColorRect" parent="."]
z_index = -5
texture_filter = 1
texture_repeat = 2
material = ExtResource("3_24k56")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -35.0
offset_right = -74.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)

[node name="Parallax" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_li6bc")

[node name="Screen" type="TextureRect" parent="Parallax"]
material = ExtResource("4_o5dal")
custom_minimum_size = Vector2(0, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -474.563
offset_top = -250.0
offset_right = 474.563
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5nv4g")
expand_mode = 3
stretch_mode = 5

[node name="Frame" type="TextureRect" parent="Parallax/Screen"]
custom_minimum_size = Vector2(0, 520)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.8931
offset_top = -48.0
offset_right = 21.3377
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_abt7p")
expand_mode = 3
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Parallax/Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Parallax/Screen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 120

[node name="VBoxContainer" type="VBoxContainer" parent="Parallax/Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="Label" type="Label" parent="Parallax/Screen/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10000
text = "Attack Sucessfull"
label_settings = SubResource("LabelSettings_sq75o")

[node name="Label2" type="Label" parent="Parallax/Screen/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10000
text = "Select a card"
label_settings = SubResource("LabelSettings_e2ejy")

[node name="HBoxContainer2" type="HBoxContainer" parent="Parallax/Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Spacer" type="Control" parent="Parallax/Screen/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 5)
layout_mode = 2

[node name="StoryLabel" type="RichTextLabel" parent="Parallax/Screen/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_abt7p")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Parallax/Screen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 100

[node name="CardsContainer" type="HBoxContainer" parent="Parallax/Screen/MarginContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 70

[node name="MarginContainer" type="MarginContainer" parent="Parallax/Screen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/margin_right = 150

[node name="AddToDeckPanel" parent="Parallax/Screen/MarginContainer/MarginContainer" instance=ExtResource("4_e2ejy")]
layout_mode = 2

[node name="NextBattleButton" type="TextureButton" parent="Parallax/Screen"]
custom_minimum_size = Vector2(175, 75)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -85.5632
offset_top = -61.0
offset_right = 89.4368
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 0
disabled = true
texture_normal = ExtResource("7_j0vtd")
texture_disabled = ExtResource("8_fomr0")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("11_y51d7")

[node name="Label" type="Label" parent="Parallax/Screen/NextBattleButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 3286.0
offset_bottom = 1205.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
text = "Next Battle"
label_settings = SubResource("LabelSettings_j0vtd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PostProcessing" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Fade" type="ColorRect" parent="PostProcessing"]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -35.0
offset_right = -74.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="FadeAnimation" type="AnimationPlayer" parent="PostProcessing/Fade"]
libraries = {
&"": SubResource("AnimationLibrary_cmo68")
}

[node name="ColorRect" type="ColorRect" parent="PostProcessing"]
material = ExtResource("12_y51d7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -74.0
offset_top = -35.0
offset_right = -74.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Parallax/Screen/NextBattleButton" to="." method="_on_texture_button_pressed"]
